# ghosttype

./: .gitignore  .pre-commit-config.yaml  .semgrepignore  .trufflehogignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  LICENSE  Makefile  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  SSCS-USER-ACTIONS.md  THREAT-MODEL.md  pyproject.toml  requirements-citools.in  requirements.in
.github/: dependabot.yml  th-selfscan-exclude.txt
.github/workflows/: ci.yml  release.yml  scorecard.yml
docs/superpowers/plans/: 2026-05-12-ghosttype-v1.md
docs/superpowers/specs/: 2026-05-12-ghosttype-design.md
ghosttype/: cli.py  models.py  pattern_engine.py  patterns.py  report.py  scanner.py  trufflehog_engine.py
ghosttype/scanners/: __init__.py  base.py  chatgpt.py  claude.py  claude_code.py  codex.py  cursor.py
tests/: test_cli.py  test_coverage_behaviors.py  test_integration.py  test_models.py  test_patterns.py  test_patterns_filters.py  test_report.py  test_scanner.py  test_scanner_coverage.py  test_trufflehog_engine.py
tests/fixtures/: sample_conversation.jsonl
tests/fixtures/conversations/claude_code/: api_integration.jsonl  aws_deployment.jsonl  clean_conversation.jsonl  database_setup.jsonl  jwt_debugging.jsonl
tests/fixtures/conversations/codex/: logs_2.sqlite  state_5.sqlite
tests/fixtures/conversations/cursor/: state.vscdb
tests/scanners/: test_chatgpt.py  test_claude.py  test_claude_code.py  test_claude_code_resilience.py  test_codex.py  test_cursor.py
