[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghosttype"
version = "0.2.0"
description = "Local forensic scanner for AI tool conversation credentials"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "cryptography>=41.0",
    "rich>=13.0",
]

[project.scripts]
ghosttype = "ghosttype.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
